<resources>
    <string name="app_name">PCStorage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">خانه</string>
    <string name="Profile">پروفایل</string>
    <string name="Storage">حافظه</string>
    <string name="Add">افزودن فایل</string>
    <string name="searchHint">سرچ فولدر</string>
    <string name="Images">تصاویر</string>
    <string name="Videos">فیلم ها</string>
    <string name="Documents">اسناد</string>
    <string name="All">همه</string>
    <string name="folders">پوشه ها</string>
    <string name="recent_uploads">آپلود های اخیر</string>
    <string name="inProgress">درحال بارگذاری</string>
    <string name="available_resources">فضای آزاد:</string>
    <string name="total_storage">کل حافظه:</string>
    <string name="filled_space">فضای اشغال</string>
    <string name="other">سایر</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="shared_folders">پوشه های مشترک</string>
    <string name="shared_files">فایل های مشترک</string>
    <string name="cancel_upload">لغو بارگذاری</string>
    <string name="cancel">لفو</string>
    <string name="ok">تایید</string>
    <string name="select_folder">انتخاب پوشه</string>
    <string name="add_new_folder">افزودن پوشه ی جدید</string>
    <string name="folder_name">نام پوشه</string>
    <string name="login_to_your_account">ورود به پروفایل</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="dont_have_an_account">حساب کاربری ندارید؟</string>
    <string name="signup_now">ثبت نام کنبد</string>
    <string name="Login">ورود</string>
    <string name="signup">ثبت نام</string>
    <string name="name">نام</string>
    <string name="already_have_an_account">حساب کاربری دارید؟</string>
</resources>