<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.LoginFragment"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/rhino"
        android:textSize="45sp"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_person_24"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:minLines="1"


            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAlignment="textEnd"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_open_24"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:minLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textSize="14sp"
                android:textColor="@color/rhino"/>
            <TextView
                android:id="@+id/login_signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_now"
                android:textSize="14sp"
                android:textColor="@color/cornflower_blue"
                android:textStyle="bold"
                />
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>