<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"

    android:layoutDirection="rtl">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:searchHintIcon="@null"
        app:queryHint="@string/searchHint"
        app:iconifiedByDefault="false"
        android:elevation="2dp"

        app:searchIcon="@drawable/baseline_search_24"
        app:closeIcon="@drawable/baseline_clear_24"

        android:foregroundTint="@color/rhino"
        android:background="@drawable/search_bg"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20sp"
        android:textDirection="rtl"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/folders_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folders"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/folders_text"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_marginStart="10dp"
                />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView

            android:layout_marginTop="16dp"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:clipToPadding="false"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
           >
            <TextView
                android:id="@+id/recent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_uploads"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/baseline_keyboard_double_arrow_down_24"
                android:layout_marginStart="10dp"
                />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView

            android:layout_marginTop="16dp"
            android:id="@+id/upload_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:clipToPadding="false"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>